--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest",
-    "test:e2e": "playwright test"
+    "test": "jest --config jest.config.ts",
+    "test:unit": "jest --config jest.config.ts",
+    "test:e2e": "playwright test",
+    "test:e2e:ci": "start-server-and-test start http://localhost:3000 test:e2e",
+    "test:watch": "jest --config jest.config.ts --watch"
   },
   "dependencies": {
     "express": "^4.18.2"
@@ -15,11 +18,14 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.4.2",
-    "jest": "^29.6.1",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
     "playwright": "^1.43.1",
-    "ts-jest": "^29.1.1",
+    "start-server-and-test": "^2.0.3",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
