--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     
     steps:
     - uses: actions/checkout@v3
@@ -16,7 +17,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '22'
+        node-version: lts/*
         cache: 'npm'
     
     - name: Install dependencies
@@ -25,6 +26,9 @@ jobs:
     - name: Build application
       run: npm run build
     
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps --force
+    
     - name: Run unit tests
       run: npm run test:unit
     
@@ -32,12 +36,12 @@ jobs:
       run: npm run test:e2e:ci
     
     - name: Upload test results
-      if: always()
+      if: ${{ !cancelled() }}
       uses: actions/upload-artifact@v4
       with:
         name: test-results
         path: |
-          test-results/
+          jest-report/
           playwright-report/
         retention-days: 30
 
