--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --config jest.config.ts",
     "test:unit": "jest --config jest.config.ts",
     "test:e2e": "playwright test",
-    "test:e2e:ci": "start-server-and-test start http://localhost:3000 test:e2e",
+    "test:e2e:ci": "start-server-and-test start http://localhost:3000 test:e2e --timeout 120000",
     "test:watch": "jest --config jest.config.ts --watch"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "@types/node": "^20.4.2",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "playwright": "^1.43.1",
     "start-server-and-test": "^2.0.3",
     "supertest": "^7.1.0",
