--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --config jest.config.ts",
     "test:unit": "jest --config jest.config.ts",
     "test:e2e": "playwright test",
-    "test:e2e:ci": "start-server-and-test --timeout 120000 start http://localhost:3000 test:e2e",
+    "test:e2e:ci": "start-server-and-test npm run start http://localhost:3000 test:e2e --timeout 120000",
     "test:watch": "jest --config jest.config.ts --watch"
   },
   "dependencies": {
