--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,6 +50,8 @@ jobs:
         run: npx playwright install chromium --with-deps --force
       - name: Run e2e tests
         run: npm run test:e2e:ci
+      - name: Ensure playwright-report exists
+        run: mkdir -p playwright-report
       - name: Upload Playwright test results
         if: ${{ !cancelled() }}
         uses: actions/upload-artifact@v4
@@ -77,4 +79,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/room-occupancy-api:${{ github.sha }} 
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/room-occupancy-api:${{ github.sha }}
+      - name: Curl health endpoint
+        run: curl -v http://localhost:3000/health || true 
