--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js || (echo 'Server failed to start' && exit 1)",
     "test": "jest --config jest.config.ts",
     "test:unit": "jest --config jest.config.ts",
     "test:e2e": "playwright test",
