--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -92,10 +92,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/room-occupancy-api:${{ github.sha }}
+      - name: Build Docker image
+        run: |
+          docker build --file ./Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/room-occupancy-api:${{ github.sha }} .
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/room-occupancy-api:${{ github.sha }}
